Add unit tests to CI

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -12,7 +12,19 @@ jobs:
         with:
           python-version: 3.9
       - name: Install Dependencies
-        # need to install all dependencies for mypy so that we have all the type stubs
         run: pip install -r requirements-dev.txt
       - name: Run pre-commit checks
         run: pre-commit run --all-files
+
+  unit-tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
+      - name: Install Dependencies
+        run: pip install -r requirements-dev.txt
+      - name: Run pytest
+        run: pytest
