--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -28,3 +28,8 @@ jobs:
         run: pip install -r requirements-dev.txt
       - name: Run pytest
         run: pytest
+        env:
+          MONGO_USER: user
+          MONGO_PASS: pass
+          MONGO_ENDPOINT: localhost
+          MONGO_PORT: 1312
