--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -27,10 +27,9 @@ jobs:
       - name: Install Dependencies
         run: pip install -r requirements-dev.txt
       - name: Run pytest
-        run: ./bin/test.sh
+        run: python -m pytest
         env:
           MONGO_USER: user
           MONGO_PASS: pass
           MONGO_ENDPOINT: localhost
           MONGO_PORT: 1312
-          PYTHONPATH: src
