--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,16 @@
 version: '3'
 
 services:
+  redis:
+    image: redis
+    expose:
+      - 6379
+
   parler-search:
     build: .
     ports:
       - 5005:5000
     env_file:
       - .env
+    depends_on:
+      - redis
