--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -11,10 +11,12 @@ jobs:
       - uses: actions/setup-python@v1
         with:
           python-version: 3.9
+      - name: Install poetry
+        run: pip install poetry
       - name: Install Dependencies
-        run: pip install -r requirements-dev.txt
+        run: poetry install
       - name: Run pre-commit checks
-        run: pre-commit run --all-files
+        run: poetry run pre-commit run --all-files
 
   unit-tests:
     runs-on: ubuntu-latest
@@ -24,10 +26,12 @@ jobs:
       - uses: actions/setup-python@v1
         with:
           python-version: 3.9
+      - name: Install poetry
+        run: pip install poetry
       - name: Install Dependencies
-        run: pip install -r requirements-dev.txt
+        run: poetry install
       - name: Run pytest
-        run: pytest
+        run: poetry run pytest
         env:
           MONGO_USER: user
           MONGO_PASS: pass
